@@ -462,11 +462,10 @@ typedef enum
 typedef enum
 {
 	TIMEPERIOD_TYPE_ONETIME = 0,
-	TIMEPERIOD_TYPE_HOURLY,
-	TIMEPERIOD_TYPE_DAILY,
+/*	TIMEPERIOD_TYPE_HOURLY,*/
+	TIMEPERIOD_TYPE_DAILY = 2,
 	TIMEPERIOD_TYPE_WEEKLY,
 	TIMEPERIOD_TYPE_MONTHLY,
-	TIMEPERIOD_TYPE_YEARLY
 } zbx_timeperiod_type_t;
 
 typedef enum
