@@ -4,6 +4,7 @@ Changes for 1.9
 
 Changes for 1.8.2
 
+ - [ZBX-1777] fixed evaluating of the maintenance periods (Sasha)
  - [ZBX-1513] fixed reseting user password when updating user and http auth is enabled (Vedmak)
  - [ZBX-1904] fixed naming procedure for discovered IPv6 hosts without DNS provided replacing all not-allowed symbols with '_' (Dmitry)
  - [ZBX-1877] template itself in template linkage popup is now disabled (Vedmak)
